# CudaPangram

./: .gitignore  CMakeLists.txt  all_words.inl  benchmark.txt  masks.txt  postprocessor.py  script.py  solutionsTest.txt
include/: alteredFilteredWords.inl  filteredWords.inl  kernel.cuh
src/: main.cu
